#69 tf2puml属性を使ってグループ化する